fix: Overflow due to newest sponsor.

--- a/resources/sass/footer.scss
+++ b/resources/sass/footer.scss
@@ -19,6 +19,7 @@
   justify-content: center;
   img {
     max-height: 50px;
+    max-width: 100%;
     width: auto;
   }
   a {
